Updating metadata and output path

--- a/workflow/app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+++ b/workflow/app/workflows/process_s2_swath/templates/s2_metadata_template.xml
@@ -14,8 +14,11 @@
   </gmd:hierarchyLevel>
   <gmd:contact>
     <gmd:CI_ResponsibleParty>
+      <gmd:individualName gco:nilReason="missing">
+
+      </gmd:individualName>
       <gmd:organisationName>
-        <gco:CharacterString>Department for Environment, Food and Rural Affairs</gco:CharacterString>
+        Department for Environment Food &amp; Rural Affairs
       </gmd:organisationName>
       <gmd:contactInfo>
         <gmd:CI_Contact>
@@ -34,7 +37,7 @@
     </gmd:CI_ResponsibleParty>
   </gmd:contact>
   <gmd:dateStamp>
-    <gco:Date>$metadataDate</gco:Date>
+    <gco:DateTime>$metadataDate</gco:DateTime>
   </gmd:dateStamp>
   <gmd:metadataStandardName>
     <gco:CharacterString>ISO 19115:2003 - Geographic information - Metadata</gco:CharacterString>
@@ -62,18 +65,21 @@
       <gmd:citation>
         <gmd:CI_Citation>
           <gmd:title>
-            <gco:CharacterString>$fileIdentifier</gco:CharacterString>
+            <gco:CharacterString>$title</gco:CharacterString>
           </gmd:title>
           <gmd:date>
             <gmd:CI_Date>
               <gmd:date>
-                <gco:Date>$publishedDate</gco:Date>
+                <gco:DateTime>$publishedDate</gco:DateTime>
               </gmd:date>
               <gmd:dateType>
                 <gmd:CI_DateTypeCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_DateTypeCode" codeListValue="creation" codeSpace="ISOTC211/19115">creation</gmd:CI_DateTypeCode>
               </gmd:dateType>
             </gmd:CI_Date>
           </gmd:date>
+          <gmd:edition gco:nilReason="missing">
+
+          </gmd:edition>
           <gmd:presentationForm>
             <gmd:CI_PresentationFormCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_PresentationFormCode" codeListValue="mapDigital" codeSpace="ISOTC211/19115">mapDigital</gmd:CI_PresentationFormCode>
           </gmd:presentationForm>
@@ -84,6 +90,9 @@
           These data have been created by the Department for Environment, Food and Rural Affairs (Defra) in order to cost effectively provide high quality, analysis ready data for a wide range of applications.  Data is supplied under the Open Government Licence.  These data contain modified Copernicus Sentinel-2 (Level 1C) data processed to a surface reflectance product (Level 2). Processing used the following steps: reprojection to OSGB 1936/British National Grid (EPSG27700), band sharpening to 10m (removing the native 60m ESA Bands 1, 9 and 10), cloud masking, atmospheric correction and topographic correction using the Aerial Photography Great Britain (APGB) 10m resolution DEM. Images are named in accordance with the sensor information and processing parameters employed, delineated by the alphanumeric characters separated by an underscore (_). The granule identifier is displayed in each name as TXXXXX, where XXXXX contains the details of specific granules in relation to the Sentinel-2 tiling grid (https://earth.esa.int/web/sentinel/missions/sentinel-2/data-products). The relative orbit number is displayed in each name as ORBXXX, where XXX is the relative orbit number (https://sentinel.esa.int/web/sentinel/missions/sentinel-2/satellite-description/orbit). They have been processed to surface reflectance using the Atmospheric and Radiometric Correction of Satellite Imagery (ARCSI) software, v3.1.6 and reprojected using GDAL v2.2.4 using a singularity image based on docker image $dockerImage produced by JNCC.  Further information on the production process is available in this report: http://randd.defra.gov.uk/Document.aspx?Document=14199_SD1707Finalreport.pdf
         </gco:CharacterString>
       </gmd:abstract>
+      <gmd:purpose gco:nilReason="missing">
+
+      </gmd:purpose>
       <gmd:status>
         <gmd:MD_ProgressCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_ProgressCode" codeListValue="completed" codeSpace="ISOTC211/19115">completed</gmd:MD_ProgressCode> 
       </gmd:status>
@@ -94,27 +103,6 @@
           </gmd:maintenanceAndUpdateFrequency>
         </gmd:MD_MaintenanceInformation>
       </gmd:resourceMaintenance>
-      <gmd:pointOfContact>
-        <gmd:CI_ResponsibleParty>
-          <gmd:organisationName>
-            <gco:CharacterString>Department for Environment, Food and Rural Affairs</gco:CharacterString>
-          </gmd:organisationName>
-          <gmd:contactInfo>
-            <gmd:CI_Contact>
-              <gmd:address>
-                <gmd:CI_Address>
-                  <gmd:electronicMailAddress>
-                    <gco:CharacterString>Earthobs@jncc.gov.uk</gco:CharacterString>
-                  </gmd:electronicMailAddress>
-                </gmd:CI_Address>
-              </gmd:address>
-            </gmd:CI_Contact>
-          </gmd:contactInfo>
-          <gmd:role>
-            <gmd:CI_RoleCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/gmxCodelists.xml#CI_RoleCode" codeListValue="owner">owner</gmd:CI_RoleCode>
-          </gmd:role>
-        </gmd:CI_ResponsibleParty>
-      </gmd:pointOfContact>
       <gmd:descriptiveKeywords>
         <gmd:MD_Keywords>
          <gmd:keyword>
@@ -167,7 +155,7 @@
             <gmd:MD_RestrictionCode codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#MD_RestrictionCode" codeListValue="license" codeSpace="ISOTC211/19115">license</gmd:MD_RestrictionCode>
           </gmd:useConstraints>
           <gmd:otherConstraints>
-            <gco:CharacterString>OGL (OGL): Open Government Licence v3 (OGL): This data is licensed pen Government Licence v3. The Keeper of the Public Records has authority to license Information subject to copyright and database right owned by the Crown. The extent of the offer to license this Information under the terms of this licence is set out in the UK Government Licensing Framework. (http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/)</gco:CharacterString>
+            <gco:CharacterString>OGL (OGL): Open Government Licence v3 (OGL): This data is licensed under the Open Government Licence v3. The Keeper of the Public Records has authority to license Information subject to copyright and database right owned by the Crown. The extent of the offer to license this Information under the terms of this licence is set out in the UK Government Licensing Framework. (http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/)</gco:CharacterString>
           </gmd:otherConstraints>
         </gmd:MD_LegalConstraints>
       </gmd:resourceConstraints>
@@ -229,7 +217,7 @@
       </gmd:extent>
       <gmd:supplementalInformation>
         <gco:CharacterString>
-        	Data Collection Time: $extentStartDate
+        	Data Collection Time: $collectionTime
 		      ARCSI_CLOUD_COVER: $arcsiCloudCover
 		      ARCSI_AOT_RANGE_MAX: $arcsiAotRangeMax
 		      ARCSI_AOT_RANGE_MIN: $arcsiAotRangeMin
