--- a/workflow/app/workflows/process_s2_swath/templates/s2_metadata_template.xml
+++ b/workflow/app/workflows/process_s2_swath/templates/s2_metadata_template.xml
@@ -218,6 +218,8 @@
         <gco:CharacterString>
           Data Collection Time: $collectionTime
           ESA file name: $ESAfilename
+          ESA_processing_baseline: $PROCESSING_BASELINE
+          ESA_Level_1C_product_DOI: $PRODUCT_DOI
           ARCSI_CLOUD_COVER: $arcsiCloudCover
           ARCSI_AOT_RANGE_MAX: $arcsiAotRangeMax
           ARCSI_AOT_RANGE_MIN: $arcsiAotRangeMin
